# cpp-audio-library

./: CMakeLists.txt  LICENSE  README.md  compile.sh  cpp-audio.sln
Scripts/: generate_component.py
cpp-audio/: API.cpp  API.h  Component.cpp  FilterLP.cpp  FilterLP.h  IAudio.h  MasterMixer.cpp  MasterMixer.h  Oscillator.cpp  Oscillator.h  SDL2Audio.cpp  SDL2Audio.h  TestLoop.h  TestLoopMacros.h  Utilities.cpp  audio.cpp  audio.hPP  cpp-audio.vcxproj  cpp-audio.vcxproj.filters  main.cpp
other/: class_diagram.uxf
scripts/: generate_component.py
src/: API.cpp  API.h  Globals.h  Utilities.cpp  Utilities.h
src/Audio/: IAudio.h  SDL2Audio.cpp  SDL2Audio.h
src/Components/: Component.cpp  Component.h  FilterLP.cpp  FilterLP.h  MasterMixer.cpp  MasterMixer.h  Oscillator.cpp  Oscillator.h
src/Example/: Main.cpp  TestLoop.h  TestLoopMacros.h
vs2019/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AudioLib.vcxproj  AudioLib.vcxproj.filters  AudioProj.sln  CMakeCache.txt  Example.vcxproj  Example.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
vs2019/AudioLib/: AudioLib.vcxproj  AudioLib.vcxproj.filters
vs2019/Example/: Example.vcxproj  Example.vcxproj.filters
